--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <label for="isenha">senha</label>
                        </div>
                        <input type="submit" value="Enviar">
-                       <a href="esqueci.html">
+                       <a href="esqueci.html" class="botao">
                         Esqueci a senha <span class="material-symbols-outlined">
                             mail
                         </span>
